<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_createTrip"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/fragment_createTrip_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_switchDates"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trip_destination"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/fragment_createTrip_input_tripDestino"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"

            android:ems="10"

            android:hint="@string/hint_inputDestination"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/fragment_createTrip_btn_country"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:drawableBottom="@drawable/ic_language">

        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/trip_travelDate"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/activity_createTrip_input_travelDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hint_InputDate"
            android:inputType="date"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_createTrip_LayoutInput_tripReturnDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_createTrip_text_tripReturnDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/trip_returnDate"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/fragment_createTrip_input_tripReturnDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:maxLines="1" />
    </LinearLayout>

    <Button
        android:id="@+id/fragment_createTrip_btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:text="@string/btn_finish">

    </Button>

</LinearLayout>
